# xworkflows

./: .gitignore  .travis.yml  ChangeLog  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  test.yml  xworkflows-ci.yml
doc/: Makefile  conf.py  definition.rst  django.rst  example.rst  index.rst  internals.rst  reference.rst
docs/: changelog.rst  conf.py  reference.rst
src/xworkflows/: __init__.py  base.py  compat.py  utils.py  version.py
tests/: __init__.py  compat.py  test_base.py  test_using.py  test_utils.py
xworkflows/: __init__.py  base.py  compat.py
