[metadata]
name = linuxforhealth-xworkflows
version = 1.0.0
author = Raphaël Barrois, LinuxForHealth
description = LinuxForHealth fork of the XWorkflows project. XWorkflows implements workflows (or state machines) for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
keywords =
    linuxforhealth
    lfh
    workflow
    state machine
    automaton
url = https://github.com/LinuxForHealth/xworkflows
project_urls =
    Bug Tracker = https://github.com/LinuxForHealth/xworkflows/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test = pytest==6.1.2
dev = flake8==3.9.0
