[metadata]
name = xworkflows
version = 1.1.1.dev0
description = A library implementing workflows (or state machines) for Python projects.
long_description = file: README.rst
# https://docutils.sourceforge.io/FAQ.html#what-s-the-official-mime-type-for-restructuredtext-data
long_description_content_type = text/x-rst
author = Raphaël Barrois
author_email = raphael.barrois_xworkflows@polytechnique.org
url = https://github.com/rbarrois/xworkflows
keywords = workflow, state machine, automaton
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
package_dir =
    =src
packages = find:
python_requires = >=2.7
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    # Testing
    check_manifest
    flake8
    tox
    # Packaging
    zest.releaser[recommended]
doc =
    Sphinx
    sphinx_rtd_theme

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
ignore =
    # Ignore "and" at start of line.
    W503
max-line-length = 120
